@@ -34,6 +34,7 @@ my %WriteMakefileArgs = (
     "Sub::Exporter" => 0,
     "Test::Deep" => 0,
     "Test::Deep::JSON" => 0,
+    "Test::Fatal" => 0,
     "Test::More" => "0.88",
     "YAML::Tiny" => 0,
     "lib" => 0
@@ -58,6 +59,7 @@ my %FallbackPrereqs = (
   "Sub::Exporter" => 0,
   "Test::Deep" => 0,
   "Test::Deep::JSON" => 0,
+  "Test::Fatal" => 0,
   "Test::More" => "0.88",
   "YAML::Tiny" => 0,
   "lib" => 0,
